--- a/index.html
+++ b/index.html
@@ -1,13 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head> 
+        <!-- Верхняя линия -->
+    <body>
+        <header>
+            <a href="./index.html">WebStudio</a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="">Студия</a>
+                    </li>
+                    <li>Портфолио</li>
+                    <li>Контакти</li>
+                </ul>
+            </nav>
+            <div>
+                <ul>
+                    <li>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+        <!-- Шапка -->
+        <main>
+            <section>
+                <img src="./img/Bg.png" alt="Поле" width="1600">
+                <h1>Эффективные решения для вашего бизнеса</h1>
+                <button>Заказать услугу</button>
+            </section>
+        <!-- Особенности -->
+            <section>
+                <h2>Наша особенность</h2>
+                    <ul>
+                        <li>
+                            <h3>Внимание к деталям</h3>
+                            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        </li>
+                        <li>
+                            <h3>Пунктуальность</h3>
+                            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        </li>
+                        <li>
+                            <h3>Планирование</h3>
+                            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        </li>
+                        <li>
+                            <h3>Современные технологии</h3>
+                            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        </li>
+                    </ul>
+            </section>
+        <!-- Чем мы занимаемся -->
+            <section>
+                <h2>Чем мы занимаемся</h2>
+                <ul>
+                    <li>
+                        <img src="./img/keyboard.jpg" alt="Клавиатура" width="370">
+                    </li>
+                    <li>
+                        <img src="./img/notebook.jpg" alt="ноутбук" width="370">
+                    </li>
+                    <li>
+                        <img src="./img/tablet.jpg" alt="планшет" width="370">
+                    </li>
+                </ul>
+            </section>
+        <!-- Наша команда -->
+            <section>
+                <h2>Наша команда</h2>
+                <ul>
+                    <li>
+                        <img src="./img/team_card_one.jpg" alt="Фото Дмитрия" width="270">
+                        <h3>Игорь Демьяненко</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./img/team_card_two.jpg" alt="Фото Ольгы" width="270">
+                        <h3>Ольга Репина</h3>
+                        <p>Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./img/team_card_three.jpg" alt="Фото Николая" width="270">
+                        <h3>Николай Тарасов</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./img/team_card_four.jpg" alt="Фото Дмитрия" width="270">
+                        <h3>Михаил Ермаков</h3>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <img src="./img/Footer_bg.jpg" alt="Поле" width="1600">
+                <nav>
+                    <a href="./index.html">WebStudio</a>
+                    <address>
+                        <ul>
+                            <li>
+                                <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2">г. Киев, пр-т Леси Украинки, 26</a>
+                            </li>
+                            <li>
+                                <a href="mailto:info@example.com">info@example.com</a>
+                            </li>
+                            <li>
+                                <a href="tel:+380991111111">+38 099 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </nav>
+        </footer>
+    </body>
 </html>
