--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
                     <li>
                         <a href="">Студия</a>
                     </li>
-                    <li>Портфолио</li>
-                    <li>Контакти</li>
+                    <li>
+                        <a href="">Портфолио</a>
+                    </li>
+                    <li>
+                        <a href="">Контакти</a>
+                    </li>
                 </ul>
             </nav>
-            <div>
                 <ul>
                     <li>
                         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -28,12 +31,10 @@
                         <a href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
-            </div>
         </header>
         <!-- Шапка -->
         <main>
             <section>
-                <img src="./img/Bg.png" alt="Поле" width="1600">
                 <h1>Эффективные решения для вашего бизнеса</h1>
                 <button>Заказать услугу</button>
             </section>
@@ -101,24 +102,22 @@
                 </ul>
             </section>
         </main>
+        <!-- Подвал -->
         <footer>
-            <img src="./img/Footer_bg.jpg" alt="Поле" width="1600">
-                <nav>
-                    <a href="./index.html">WebStudio</a>
-                    <address>
-                        <ul>
-                            <li>
-                                <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2">г. Киев, пр-т Леси Украинки, 26</a>
-                            </li>
-                            <li>
-                                <a href="mailto:info@example.com">info@example.com</a>
-                            </li>
-                            <li>
-                                <a href="tel:+380991111111">+38 099 111 11 11</a>
-                            </li>
-                        </ul>
-                    </address>
-                </nav>
+            <a href="./index.html">WebStudio</a>
+            <address>
+                <a
+                    href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2">г. Киев, пр-т Леси Украинки, 26
+                </a>
+                <ul>
+                    <li>
+                        <a href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
         </footer>
     </body>
 </html>
