--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head> 
-        <!-- Верхняя линия -->
     <body>
+        <!-- Шапка -->
         <header>
-            <a href="./index.html">WebStudio</a>
             <nav>
+                <a href="./index.html">WebStudio</a>
                 <ul>
                     <li>
                         <a href="">Студия</a>
@@ -32,11 +32,11 @@
                     </li>
                 </ul>
         </header>
-        <!-- Шапка -->
         <main>
+        <!-- Герой -->
             <section>
                 <h1>Эффективные решения для вашего бизнеса</h1>
-                <button>Заказать услугу</button>
+                <button type="button">Заказать услугу</button>
             </section>
         <!-- Особенности -->
             <section>
@@ -107,7 +107,7 @@
             <a href="./index.html">WebStudio</a>
             <address>
                 <a
-                    href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2">г. Киев, пр-т Леси Украинки, 26
+                    href="https://goo.gl/maps/C3wc61QRGGhpV8wW8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26
                 </a>
                 <ul>
                     <li>
