--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <!-- Шапка -->
         <header>
+        <h1>НЕ ОБНОВЛЯЕТ ГИТ</h1>
             <nav>
                 <a href="./index.html">WebStudio</a>
                 <ul>
